[package]
name = "rayq"
version = "0.1.0"
edition = "2024"
authors = ["Denis Tu <dmarshaltu@gmail.com>"]
description = "Shadow Swap - A unique multiplayer duel game with inverse control mechanics"
license = "MIT OR Apache-2.0"
repository = "https://github.com/DmarshalTU/shadow-swap"
keywords = ["game", "multiplayer", "raylib", "rust", "indie"]
categories = ["games"]

[dependencies]
raylib = "5.5.1"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
